--- a/requirements.txt
+++ b/requirements.txt
@@ -110,6 +110,7 @@ Pygments==2.16.1
 pyparsing==3.1.1
 PyPika==0.48.9
 pyreadline3==3.4.1
+pysqlite3-binary
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 python-iso639==2023.6.15
